using System.Collections;
using System.Collections.Generic;
using System;

internal class AnimatorStrings {
    internal static string isMoving = "IsMoving";
    internal static string isRunning = "IsRunnningPressed";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string IsOnWall = "IsOnWall";


} // AnimatorStrings